[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-mind"
version = "0.2.0"
description = "Cross-service impact analysis environment for OpenEnv — agents learn to identify downstream blast radius when a microservice changes, using LLM-generated noisy SRE observations (Llama-3.1-8B via Cerebras)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["openenv", "rl", "microservices", "impact-analysis", "sre", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core OpenEnv framework
    "openenv-core>=0.2.2",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    # Data models
    "pydantic>=2.0.0",
    # Knowledge graph
    "networkx>=3.0",
    # HTTP client (used by EnvClient)
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    # Baseline inference script
    "openai>=1.0.0",
    # LLM simulator (Llama-3.1-8B via Cerebras HF provider)
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["service_impact_env*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
